[metadata]
name = meld_tester
version = 0.0.1
long_description = file: README.meld_tester
long_description_content_type = text/markdown

[options]

python_requires = >= 3.9

install_requires =
    python-dotenv>=1.0.0,<2
    openai>=0.27.8,<1
    Levenshtein>=0.25.0,<1
    tiktoken>=0.6.0,<1
    tenacity>8.2.2,<9